# zul

./: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
chain/: Cargo.toml
chain/zul-bridge/: Cargo.toml
chain/zul-bridge/src/: batch.rs  client.rs  deposit.rs  lib.rs  recover.rs  rpc.rs
chain/zul-executor/: Cargo.toml
chain/zul-executor/src/: builtins.rs  callback.rs  lib.rs  reserved.rs  sysvars.rs
chain/zul-node/: Cargo.toml
chain/zul-node/src/: bridge.rs  keys.rs  l1.rs  main.rs  mempool.rs  metrics.rs  node.rs  pool.rs  withdraw_smt.rs
chain/zul-primitives/: Cargo.toml
chain/zul-primitives/src/: block.rs  config.rs  constants.rs  genesis.rs  hash.rs  lib.rs  merkle.rs  meta.rs  wrapped_spl.rs
chain/zul-privacy/: Cargo.toml
chain/zul-privacy/src/: field.rs  instruction.rs  lib.rs  poseidon.rs  processor.rs  service.rs  state.rs  verifier.rs  verifying_keys.rs
chain/zul-privacy/tests/: sdk_compat.rs  snarkjs_crosstest.rs  tree_root_emit.rs
chain/zul-privacy/tests/fixtures/: sdk_instructions.json  transfer_proof.json
chain/zul-rpc/: Cargo.toml
chain/zul-rpc/src/: backend.rs  encode.rs  lib.rs  server.rs
chain/zul-store/: Cargo.toml
chain/zul-store/src/: account.rs  error.rs  lib.rs  queue.rs  smt.rs  store.rs
circuits/: README.md  package-lock.json  package.json  transfer.circom  unshield.circom
circuits/artifacts/: CEREMONY-TRANSCRIPT.md
circuits/lib/: merkle.circom  note.circom
circuits/scripts/: ceremony.mjs  common.mjs  compile.mjs  export-vk.mjs  gen-fixture.mjs  setup.mjs
config/: genesis.example.toml  node.example.toml
config/mainnet/: genesis.example.toml  node.example.toml
config/testnet/: genesis.example.toml  node.example.toml
db/: package.json
db/prisma/: schema.prisma
db/src/: index.ts
deploy/: Caddyfile.mainnet  zul-backup.service  zul-backup.timer  zul-health.service  zul-health.timer  zul-node.service  zul-node@.service
docs/: DEPLOY-MAINNET.md  DEPLOY.md  HARDENING-CHANGELOG.md  MAINNET-CEREMONY.md  MAINNET-COST.md  MAINNET-CUSTODY.md  MAINNET-LAUNCH.md  PLAN.md  PRIVACY-HARDENING.md  PRODUCTION-READINESS.md
docs/whitepaper/: .gitignore  README.md  build.mjs  package-lock.json  package.json  render.mjs  shots.mjs  styles.css
docs/whitepaper/content/: 00-cover.html  01-abstract.html  02-toc.html  10-introduction.html  20-background.html  30-architecture.html  40-execution.html  50-state.html  60-settlement.html  70-bridge.html  80-shielded.html  81-circuits.html  90-security.html  A0-evaluation.html  B0-northstar.html  C0-roadmap.html  D0-conclusion.html  E0-references.html  F0-appendix.html
explorer/: .env.example  next.config.mjs  package.json
explorer/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
explorer/app/account/[address]/: page.tsx
explorer/app/api/slot/: route.ts
explorer/app/block/[slot]/: page.tsx
explorer/app/blocks/: page.tsx
explorer/app/components/: LiveSlot.tsx  SearchBar.tsx  rows.tsx
explorer/app/shielded/: page.tsx
explorer/app/tx/[signature]/: page.tsx
explorer/app/txs/: page.tsx
explorer/lib/: format.ts  queries.ts
indexer/: .env.example  package.json  tsconfig.json
indexer/src/: decode.ts  indexer.ts  main.ts  rpc.ts
indexer/test/: decode.test.ts  indexer.test.ts
programs/: Anchor.toml
programs/programs/zul-da-log/: Cargo.toml
programs/programs/zul-da-log/src/: lib.rs
programs/programs/zul-settlement/: Cargo.toml
programs/programs/zul-settlement/src/: lib.rs  smt.rs
scripts/: backup-redb.sh  init-live.sh  zul-health.sh
sdk/: package.json  tsconfig.json
sdk/scripts/: e2e-live.mjs  verify-l1-batch.mjs  withdraw-submit.mjs  ws-check.mjs
sdk/src/: bincode.ts  connection.ts  field.ts  index.ts  instruction.ts  merkle.ts  notes.ts  pool.ts  poseidon.ts  proof.ts  shims.d.ts
sdk/test/: bincode.test.ts  crypto.test.ts  emit-fixture.mjs  merkle.test.ts
