[workspace]
resolver = "2"
members = [
    "zul-primitives",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
zul-primitives = { path = "zul-primitives" }

# Utilities
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
bs58 = "0.5"
toml = "0.8"

[profile.release]
lto = "thin"
