[workspace]
resolver = "2"
members = [
    "zul-primitives",
    "zul-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
zul-primitives = { path = "zul-primitives" }
zul-store = { path = "zul-store" }

# Solana / Agave (3.x line, matches local solana-cli 3.1.14)
solana-sdk = "3"
solana-system-interface = { version = "2", features = ["bincode"] }

# Utilities
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
hex = "0.4"
bs58 = "0.5"
redb = "2"
toml = "0.8"

[profile.release]
lto = "thin"
