[workspace]
resolver = "2"
members = [
    "zul-primitives",
    "zul-store",
    "zul-executor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
zul-primitives = { path = "zul-primitives" }
zul-store = { path = "zul-store" }
zul-executor = { path = "zul-executor" }

# Solana / Agave (3.x line, matches local solana-cli 3.1.14)
solana-sdk = "3"
solana-svm = "3.1"
solana-system-interface = { version = "2", features = ["bincode"] }
solana-svm-callback = "3"
solana-svm-feature-set = "3"
solana-svm-transaction = "3"
solana-program-runtime = "3"
solana-bpf-loader-program = "3"
solana-loader-v4-program = "3"
solana-system-program = "3"
solana-compute-budget-program = "3"
solana-compute-budget = "3"
solana-compute-budget-instruction = "3"
solana-fee-structure = "3"
solana-sdk-ids = "3"
solana-clock = "3"
solana-rent = "3"
solana-epoch-schedule = "3"
solana-sysvar = "3"
solana-sysvar-id = "3"
solana-message = "3"
solana-transaction-error = "3"
agave-syscalls = "3"
agave-feature-set = "3"
solana-program-binaries = { version = "3", features = ["agave-unstable-api"] }
solana-transaction-context = "3"
solana-instructions-sysvar = "3"
solana-instruction = "3"

# Utilities
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
hex = "0.4"
bs58 = "0.5"
redb = "2"
toml = "0.8"

[profile.release]
lto = "thin"

# Local dev builds of the SVM dependency tree are slow; keep moderate opt for deps.
[profile.dev.package."*"]
opt-level = 1
