[package]
name = "zul-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zul-primitives = { workspace = true }
zul-store = { workspace = true }
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
ureq = "2"

[dev-dependencies]
solana-system-interface = { workspace = true }
sha2 = "0.10"
tempfile = "3"
