[package]
name = "zul-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
solana-sdk = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
