[package]
name = "zul-privacy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zul-primitives = { workspace = true }
zul-store = { workspace = true }
solana-sdk = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }
light-poseidon = { workspace = true }
serde = { workspace = true }
serde-big-array = "0.5"
bincode = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ark-snark = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
num-bigint = "0.4"
hex = { workspace = true }
tempfile = "3"
