[package]
name = "zul-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zul-primitives = { workspace = true }
zul-store = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
jsonrpsee = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
solana-system-interface = { workspace = true }
tempfile = "3"
