[package]
name = "zul-da-log"
version = "0.1.0"
description = "ZUL data-availability log program"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "zul_da_log"

[features]
default = []
# Selects the mainnet-beta program id (vanity, ends in ZUL). Default = devnet.
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
