[package]
name = "zul-settlement"
version = "0.1.0"
description = "ZUL L1 settlement + bridge program"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "zul_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
# Pure-Rust blake3 (portable, no SIMD/asm) so the program hashes without the
# `sol_blake3` syscall, which devnet's loader does not resolve at deploy time.
blake3 = { version = "1", default-features = false }
